--- a/vmm/templates/common/index.html
+++ b/vmm/templates/common/index.html
@@ -19,7 +19,7 @@
         {% endfor %} 
     </table>
 
-    <button type="button" class="btn btn-primary btn-md btn-block" onclick="parent.location='url create'">Create a new virtual machine</button>
+    <button type="button" class="btn btn-primary btn-md btn-block" onclick="parent.location='{% url 'create' %}'">Create a new virtual machine</button>
 
 </form>
 
