removed the unnecessary create_ami module and added crude instance termination

--- a/vmm/templates/common/index.html
+++ b/vmm/templates/common/index.html
@@ -9,6 +9,7 @@
             <th>Created</th>
             <th>Instance Id</th>
             <th>Status</th>
+            <th>Actions</th>
         </tr>
 
         {% for vm in virtual_machines %} 
@@ -16,7 +17,8 @@
             <td><a href="{% url 'detail' vm.primary_name %}">{{vm.primary_name}}</td>
             <td>{{vm.creation_date}}</td>
             <td>{{vm.instance_id}}</td>
-            <td class="value">{{vm.status}}</td>
+            <td>{{vm.status}}</td>
+            <td><a href="{% url 'terminate' vm.instance_id %}">Terminate<a/></td>
         </tr>
         {% endfor %} 
     </table>
