--- a/vmm/static/css/99423eed6160e555041262ddf4a981abd85270b1-base.css
+++ b/vmm/static/css/99423eed6160e555041262ddf4a981abd85270b1-base.css
@@ -3,15 +3,22 @@ body{padding-top:40px;padding-bottom:40px;background-color:#f5f5f5;}
 .form-signin{padding:19px 29px 29px;margin:0 auto 20px;background-color:#fff;border:1px solid #e5e5e5;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 2px rgba(0, 0, 0, 0.05);-moz-box-shadow:0 1px 2px rgba(0, 0, 0, 0.05);box-shadow:0 1px 2px rgba(0, 0, 0, 0.05);}
 .form-signin .form-signin-heading,.form-signin .checkbox{margin-bottom:10px;}
 .form-signin input[type="text"],.form-signin input[type="password"]{font-size:16px;height:auto;padding:7px 9px;}
-.voucher-description{font-size:12px;color:#999;}
-.budget_left{color:green;font-weight:bold;}
 #logo-container{position:absolute;top:0;right:0;padding:10px;}
-.admin-section{padding:20px;background:#faff91;}
+.admin-section{padding:20px; background:#faff91; margin-right: 70px; margin-bottom: 7px;}
 #bail_iama{display:none;}
 .obfuscate{color:#000;cursor:default;}.obfuscate:hover{text-decoration:none;color:inherit;cursor:default;}
 .lessen{color:#000;}.lessen:hover{text-decoration:none;color:inherit;}
 .hidden{display:hidden;}
 .negative{color:red;}
+
+/* task status colors */
+/* red */
+span.undefined span.terminating {text-transform:capitalize; color:#c00;}
+/* green */
+span.created {text-transform:capitalize; color:#0c0;}
+/* blue */
+span.creating {text-transform:capitalize; color:#00c;}
+
 @media only all and (max-width:1024px){.panel .col-xs-1{width:20%;}}@media only all and (max-width:700px){.panel .col-xs-1{width:40%;}}
 /*!
  * Bootstrap v3.0.1 by @fat and @mdo
