--- a/vmm/templates/common/base.html
+++ b/vmm/templates/common/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Vouchers</title>
+    <title>Vimma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- move to block or assetgen -->
