--- a/vmm/templates/common/index.html
+++ b/vmm/templates/common/index.html
@@ -12,15 +12,21 @@
             <th>Actions</th>
         </tr>
 
-        {% for vm in virtual_machines %} 
+        {% for vm in virtual_machines %}
         <tr data-pk="{{virtual_machines.pk}}">
             <td><a href="{% url 'detail' vm.primary_name %}">{{vm.primary_name}}.dev.futurice.com</td>
             <td>{{vm.creation_date}}</td>
             <td>{{vm.instance_id}}</td>
-            <td><span class="{{vm.status}}">{{vm.status}}</span></td>
-            <td><a href="{% url 'terminate' vm.instance_id %}">Terminate<a/></td>
+            <td><span class="{{vm.status|slugify}}">{{vm.status}}</span></td>
+            <td>
+              {% if vm.status != "undefined" %}
+                <a href="{% url 'poweroff' vm.instance_id %}"><span style='color: #c00; width: 1em;'><span class="glyphicon glyphicon-off"></span></span></a>
+                <a href="{% url 'poweron' vm.instance_id %}"><span style='color: #0c0; width: 1em;'><span class="glyphicon glyphicon-play-circle"></span></span></a>
+              {% endif %}
+              <a href="{% url 'terminate' vm.instance_id %}"><span style='color: #000; width: 1em;'><span class="glyphicon glyphicon-remove-circle"></span></span></a>
+            </td>
         </tr>
-        {% endfor %} 
+        {% endfor %}
     </table>
 
     <button type="button" class="btn btn-primary btn-md btn-block" onclick="parent.location='{% url 'create' %}'">Create a new virtual machine</button>
