--- a/vmm/static/css/99423eed6160e555041262ddf4a981abd85270b1-base.css
+++ b/vmm/static/css/99423eed6160e555041262ddf4a981abd85270b1-base.css
@@ -15,7 +15,7 @@ body{padding-top:40px;padding-bottom:40px;background-color:#f5f5f5;}
 /* red */
 span.undefined, span.terminating {text-transform:capitalize; color:#c00;}
 /* green */
-span.created {text-transform:capitalize; color:#0c0;}
+span.created, span.powered-on {text-transform:capitalize; color:#0c0;}
 /* blue */
 span.creating, span.powering-on {text-transform:capitalize; color:#00c;}
 /* dark gray */
