--- a/vmm/templates/common/detail.html
+++ b/vmm/templates/common/detail.html
@@ -3,22 +3,7 @@
 {% block body %}
 
 <form class="form-signin">
-    <table class="table table-striped orders">
-        <tr>
-            <th>Virtual Machine</th>
-            <th>Created</th>
-            <th>Status</th>
-        </tr>
-
-        {% for vm in virtual_machines %} 
-        <tr data-pk="{{virtual_machines.pk}}">
-            <td><a href="{% url 'detail' vm.primary_name %}">{{vm.primary_name}}</td>
-            <td>{{vm.creation_date}}</td>
-            <td class="value">{{vm.status}}</td>
-        </tr>
-        {% endfor %} 
-    </table>
-
+    {% include 'common/partials/vm_table.html' %}
 </form>
 
 {% endblock %}
