javascript confirm for VM termination

--- a/vmm/templates/common/partials/vm_table.html
+++ b/vmm/templates/common/partials/vm_table.html
@@ -21,7 +21,7 @@
                 <a href="{% url 'poweron' vm.instance_id %}"><span title="Power on" style='color: #0c0; width: 1em;'><span class="glyphicon glyphicon-play-circle"></span></span></a>
               {% endif %}
               {% if vm.status == "stopped" or vm.status == "running" %}
-                <a href="{% url 'terminate' vm.instance_id %}"><span title="Destroy instance" style='color: #000; width: 1em;'><span class="glyphicon glyphicon-remove-circle"></span></span></a>
+                <a href="#" onClick="if (confirm('Permanently destroy instance \'{{vm.primary_name}}\'?'))  window.location='{% url 'terminate' vm.instance_id %}'"><span title="Destroy instance" style='color: #000; width: 1em;'><span class="glyphicon glyphicon-remove-circle"></span></span></a>
               {% endif %}
             </td>
         </tr>
