--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -2,6 +2,10 @@
 <!doctype html>
 <html>
   <head>
+    <script>
+      var vimmaApiRoot = '{% url "api-root" %}';
+    </script>
+
     <script src="{% static 'vimma/components/bower_components/platform/platform.js' %}"></script>
     <link rel="import" href="{% static 'vimma/components/index-elem/index-elem.html' %}">
   </head>
