--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 
+<link rel="import" href="../schedule-list/schedule-list.html">
+
 <polymer-element name="index-elem" on-core-select="{{onCoreSelect}}">
   <template>
     <paper-tabs selected="0">
@@ -11,7 +13,7 @@
     </paper-tabs>
 
     <template if="{{selectedId == tabIds.SCHEDULES}}">
-      Schedules
+      <schedule-list></schedule-list>
     </template>
 
     <template if="{{selectedId == tabIds.ANOTHER}}">
@@ -21,7 +23,7 @@
     <template if="{{selectedId == tabIds.THIRD}}">
       Third Tab contents.
     </template>
-
   </template>
+
   <script src="index-elem.js"></script>
 </polymer-element>
