--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -6,6 +6,7 @@
   <link rel="import" href="{% static 'vimma/components/index-elem/index-elem.html' %}">
 
   <script src="{% static 'vimma/js/lib/jquery-2.1.1.min.js' %}"></script>
+  <script src="{% static 'vimma/js/lib/jquery.cookie.js' %}"></script>
 {% endblock %}
 
 {% block body %}
