--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -9,6 +9,7 @@
       var vimmaApiScheduleList = '{% url "schedule-list" %}';
       var vimmaApiScheduleDetailRoot = apiDetailRootUrl(
           '{% url "schedule-detail" 0 %}');
+      var vimmaApiTimeZoneList = '{% url "timezone-list" %}';
     </script>
 
     {% block head %}{% endblock %}
