--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -18,6 +18,16 @@
               '{% url "profile-detail" 0 %}'),
           vimmaApiUserDetailRoot = apiDetailRootUrl(
               '{% url "user-detail" 0 %}'),
+          vimmaApiVMList = '{% url "vm-list" %}',
+          vimmaApiVMDetailRoot = apiDetailRootUrl(
+              '{% url "vm-detail" 0 %}'),
+          vimmaApiDummyVMDetailRoot = apiDetailRootUrl(
+              '{% url "dummyvm-detail" 0 %}'),
+          vimmaApiAWSVMDetailRoot = apiDetailRootUrl(
+              '{% url "awsvm-detail" 0 %}'),
+          vimmaApiProviderList = '{% url "provider-list" %}',
+          vimmaApiProviderDetailRoot = apiDetailRootUrl(
+              '{% url "provider-detail" 0 %}'),
           _dummy_end;
     </script>
 
