--- a/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
+++ b/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../bower_components/core-elements/core-elements.html">
 <link rel="import" href="../bower_components/paper-elements/paper-elements.html">
 
+<link rel="import" href="../create-vm/create-vm.html">
 <link rel="import" href="../error-display/error-display.html">
 <link rel="import" href="../vm-detail/vm-detail.html">
 
@@ -25,8 +26,8 @@
     <template id="main">
       Project {{model.name}}.
       <paper-tabs selected="0" on-core-select="{{onCoreSelect}}">
-        <paper-tab tabId="{{tabIds.USERS}}">Users</paper-tab>
         <paper-tab tabId="{{tabIds.VMS}}">VMs</paper-tab>
+        <paper-tab tabId="{{tabIds.USERS}}">Users</paper-tab>
       </paper-tabs>
 
       <template if="{{selectedTab == tabIds.USERS}}">
@@ -37,6 +38,7 @@
       <template if="{{selectedTab == tabIds.VMS}}">
         <template bind ref="vm-list">
         </template>
+        <create-vm prjid="{{prjid}}" on-vm-created="{{reload}}"></create-vm>
       </template>
     </template>
 
