--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -28,6 +28,10 @@
           vimmaApiProviderList = '{% url "provider-list" %}',
           vimmaApiProviderDetailRoot = apiDetailRootUrl(
               '{% url "provider-detail" 0 %}'),
+          vimmaApiVMConfigList = '{% url "vmconfig-list" %}',
+
+          vimmaEndpointCreateVM = '{% url "createVM" %}',
+
           _dummy_end;
     </script>
 
