--- a/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
+++ b/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
@@ -38,6 +38,10 @@
       <template if="{{selectedTab == tabIds.VMS}}">
         <template bind ref="vm-list">
         </template>
+        <!-- Side effect: <create-vm> can now change our prjid, but we only
+          reflect it on reload, after a vm creation.
+          TODO: change this behaviour, it may cause hard-to-find bugs.
+        -->
         <create-vm prjid="{{prjid}}" on-vm-created="{{reload}}"></create-vm>
       </template>
     </template>
