show VM list: in own projects / in other projects
Polymer composition of <component>s is starting to pay off.

Require django-filter 0.6 because of a bug with many-to-many fields
(tests fail when it happens, so they will catch a wrong version of the
library).

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
@@ -25,7 +25,7 @@
     </template>
 
     <template id="main">
-      Create a VM<br>
+      <h1>Create a VM</h1>
       <label for="project">Project:</label>
       <core-dropdown id="project" label="Select a project…"
           selected="{{prjid}}" valueattr="key"
