--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -32,6 +32,8 @@
 
           vimmaEndpointCreateVM = '{% url "createVM" %}',
 
+          vimmaUserId = {{ user.id }},
+
           _dummy_end;
     </script>
 
