--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -4,13 +4,14 @@
 
 <link rel="import" href="../schedule-list/schedule-list.html">
 <link rel="import" href="../projects-tab/projects-tab.html">
+<link rel="import" href="../vm-list/vm-list.html">
 
 <polymer-element name="index-elem" on-core-select="{{onCoreSelect}}">
   <template>
     <paper-tabs selected="0">
+      <paper-tab id="{{tabIds.VMS}}">VMs</paper-tab>
       <paper-tab id="{{tabIds.PROJECTS}}">Projects</paper-tab>
       <paper-tab id="{{tabIds.SCHEDULES}}">Schedules</paper-tab>
-      <paper-tab id="{{tabIds.THIRD}}">A Third Tab</paper-tab>
     </paper-tabs>
 
     <template if="{{selectedId == tabIds.SCHEDULES}}">
@@ -21,8 +22,8 @@
       <projects-tab></projects-tab>
     </template>
 
-    <template if="{{selectedId == tabIds.THIRD}}">
-      Third Tab contents.
+    <template if="{{selectedId == tabIds.VMS}}">
+      <vm-list></vm-list>
     </template>
   </template>
 
