--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -31,6 +31,10 @@
           vimmaApiVMConfigList = '{% url "vmconfig-list" %}',
 
           vimmaEndpointCreateVM = '{% url "createVM" %}',
+          vimmaEndpointPowerOnVM = '{% url "powerOnVM" %}',
+          vimmaEndpointPowerOffVM = '{% url "powerOffVM" %}',
+          vimmaEndpointRebootVM = '{% url "rebootVM" %}',
+          vimmaEndpointDestroyVM = '{% url "destroyVM" %}',
 
           vimmaUserId = {{ user.id }},
 
