celery structure & beat; implement all DummyVM operations with tasks

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm-dummy-data.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm-dummy-data.html
@@ -7,6 +7,9 @@
     <paper-input label="Name" floatingLabel="true"
       required error="The name is required" value="{{data.name}}">
     </paper-input>
+    <paper-input label="Delay before turning ON" floatingLabel="true"
+      required type="number" error="Must be a number" value="{{data.delay}}">
+    </paper-input>
   </template>
 
   <script src="create-vm-dummy-data.js"></script>
