--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -6,12 +6,13 @@
 <link rel="import" href="aws-vm-detail.html">
 <link rel="import" href="../error-display/error-display.html">
 
-<polymer-element name="vm-detail" attributes="vmid">
+<polymer-element name="vm-detail" attributes="vmid"
+  on-ajax-start="{{onAjaxStart}}" on-ajax-end="{{onAjaxEnd}}">
   <template>
     Hello VM id {{vmid}}.
     <br>
     <paper-button icon="refresh" label="Refresh" on-click="{{reload}}"
-        raisedButton disabled?="{{loading}}">
+        raisedButton disabled?="{{ajaxInProgress}}">
     </paper-button>
     <br>
 
@@ -20,19 +21,20 @@
     </template>
 
     <template if="{{!loading}}">
-      <template if="{{!success}}">
-        <error-display text={{errorText}}></error-display>
+      <template if="{{loadingSucceeded}}">
+        <template bind ref="vm"></template>
       </template>
+    </template>
 
-      <template if="{{success}}">
-        <template bind ref="vm">
-        </template>
-      </template>
+    <template if="{{!ajaxInProgress && !ajaxSuccess}}">
+      <br>
+      <error-display text={{ajaxErrTxt}}></error-display>
     </template>
 
     <template id="vm">
       <template if="{{provider.type == 'dummy'}}">
-        <dummy-vm-detail vmid="{{vmid}}"></dummy-vm-detail>
+        <dummy-vm-detail vmid="{{vmid}}" ajaxInProgress="{{ajaxInProgress}}">
+        </dummy-vm-detail>
       </template>
 
       <template if="{{provider.type == 'aws'}}">
