--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -46,6 +46,21 @@
           text="{{'Unknown vm provider type: “' + provider.type + '”'}}">
         </error-display>
       </template>
+
+      <br>
+
+      <button disabled?="{{ajaxInProgress}}" on-click="{{powerOn}}">
+        Turn ON
+      </button>
+      <button disabled?="{{ajaxInProgress}}" on-click="{{powerOff}}">
+        Turn OFF
+      </button>
+      <button disabled?="{{ajaxInProgress}}" on-click="{{reboot}}">
+        Reboot
+      </button>
+      <button disabled?="{{ajaxInProgress}}" on-click="{{destroy}}">
+        Destroy
+      </button>
     </template>
   </template>
 
